kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitness-tracker
  labels:
    app: fitness-tracker
    name: fitness-tracker
