kustomize/base/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker
  namespace: fitness-tracker
spec:
  type: ClusterIP
  selector:
    app: fitness-tracker
    component: app
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker
  namespace: fitness-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        app: fitness-tracker
        component: app
        technology: python
    spec:
      containers:
      - name: fitness-tracker
        image: OVERRIDE_ME
        ports:
        - containerPort: 8080
        # livenessProbe:
        #   httpGet:
        #     path: /admin/
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 30
        #   timeoutSeconds: 3
        resources:
          limits:
            # cpu: "500m"
            memory: "384Mi"
      serviceAccountName: fitness-tracker
      terminationGracePeriodSeconds: 20
