kustomize/base/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-proxy
  namespace: fitness-tracker
spec:
  type: ClusterIP
  selector:
    app: fitness-tracker
    component: proxy
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-proxy
  namespace: fitness-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness-tracker
      component: proxy
  template:
    metadata:
      labels:
        app: fitness-tracker
        component: proxy
        technology: nginx
    spec:
      containers:
      - name: fitness-tracker
        image: OVERRIDE_ME
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "64Mi"
      serviceAccountName: fitness-tracker
